--- a/order/package.json
+++ b/order/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "js-cookie": "^2.2.0",
     "socket.io-client": "^2.0.4",
     "vant": "^0.11.2",
     "vue": "^2.5.2",
