--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "element-ui": "^2.0.10",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
