--- a/order/package.json
+++ b/order/package.json
@@ -84,6 +84,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
+    "webpack-jarvis": "^0.1.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
