--- a/process.yml
+++ b/process.yml
@@ -18,6 +18,6 @@ deploy :
     path : /www/order/production
     ssh_options : StrictHostKeyChecking=no
     pre-deploy : git fetch --all
-    post-deploy : 'cd server && npm install && pm2 startOrRestart process.yml --env production'
+    post-deploy : 'cd server && sudo npm install --ignore-scripts && pm2 startOrRestart process.yml --env production'
     env : 
       NODE_ENV : production
