--- a/process.yml
+++ b/process.yml
@@ -1,5 +1,5 @@
 apps:
-  - script   : server.js
+  - script   : server/server.js
     name : 'order-server'
     watch  : true
     env    :
@@ -18,6 +18,6 @@ deploy :
     path : /www/order/production
     ssh_options : StrictHostKeyChecking=no
     pre-deploy : git fetch --all
-    post-deploy : 'cd server && sudo npm install --ignore-scripts && pm2 startOrRestart process.yml --env production'
+    post-deploy : 'cd server && sudo npm install --ignore-scripts && cd .. && pm2 startOrRestart process.yml --env production'
     env : 
       NODE_ENV : production
